# wasm-examples

./: .gitignore  Cargo.toml  README.md  play.sh
.cargo/: config.toml
component-model-built-with-cargo-component/compose-go/adder/: cli.sh
component-model-built-with-cargo-component/compose-go/calculator/: cli.sh
component-model-built-with-cargo-component/compose/cli/: Cargo.toml
component-model-built-with-cargo-component/dynamically-built-instance/: README.md
component-model-built-with-cargo-component/dynamically-built-instance/cli/: Cargo.toml
component-model-built-with-cargo-component/dynamically-built-instance/component/: Cargo.toml
component-model-built-with-cargo-component/dynamically-built-instance/component/src/: lib.rs
component-model-built-with-cargo-component/dynamically-built-instance/component/wit/: world.wit
component-model-built-with-cargo-component/hello-world/cli/: Cargo.toml
component-model-built-with-cargo-component/hello-world/cli/src/: main.rs
component-model-built-with-cargo-component/hello-world/component/: Cargo.toml
component-model-built-with-cargo-component/hello-world/component-by-wit-bindgen/src/: lib.rs
component-model-built-with-cargo-component/hello-world/component-go/: .gitignore
component-model-built-with-cargo-component/imports/: README.md
component-model-built-with-cargo-component/imports/cli/wit/: world.wit
component-model-built-with-cargo-component/imports/component1/: Cargo.toml
component-model-built-with-cargo-component/imports/component2/wit/: world.wit
component-model-built-with-cargo-component/wit-record/: README.md
component-model-built-with-cargo-component/wit-record/cli/: Cargo.toml
component-model-built-with-cargo-component/wit-record/component/: Cargo.toml
component-model-built-with-cargo-component/wit-record/component/src/: lib.rs
component-model-built-with-cargo-component/wit-resource/component/: Cargo.toml
component-model-built-with-cargo-component/wit-resource/component-go/: cli.sh  main.go
component-model-built-with-cargo-component/wit-resource/component/src/: lib.rs
component-model-built-with-wat/hello-world/host/src/: main.rs
component-model-built-with-wit-bindgen/compose/cli/src/: main.rs
component-model-built-with-wit-bindgen/host-resource/: Makefile
component-model-built-with-wit-bindgen/host-resource/cli/src/: main.rs
component-model-built-with-wit-bindgen/wasm32-wasip2-hello-world/host/src/: main.rs
component-model/compose-go/: .gitignore  README.md
component-model/compose-go/adder/: go.mod  main.go
component-model/compose-go/adder/wit/: wit
component-model/compose-go/calculator/: go.mod  main.go
component-model/compose-go/calculator/src/: lib.rs
component-model/compose-go/cli/: cli.sh  go.mod  main.go
component-model/compose/calculator/: Cargo.toml
component-model/dynamically-built-instance/cli/src/: main.rs
component-model/hello-world/: Cargo.toml  README.md
component-model/hello-world/cli/src/: helloworld.rs  main.rs
component-model/hello-world/component-by-wit-bindgen/: Cargo.toml  cli.sh
component-model/hello-world/component-go/: cli.sh  main.go
component-model/hello-world/src/: helloworld.rs
component-model/imports/cli/: Cargo.toml
component-model/imports/cli/src/: main.rs
component-model/imports/component1/src/: lib.rs
component-model/imports/component1/wit/: world.wit
component-model/imports/component2/: Cargo.toml
component-model/imports/component2/src/: lib.rs
component-model/wit-record/cli/src/: main.rs
component-model/wit-record/component/wit/: world.wit
component-model/wit-resource/: README.md
component-model/wit-resource/cli/: Cargo.toml
component-model/wit-resource/cli/src/: main.rs
component-model/wit-resource/component-go/: go.mod
component-model/wit-resource/component-go/wit/: world.wit
component-model/wit-resource/component/src/: lib.rs
component-model/wit-resource/component/wit/: world.wit
component/compose/: README.md
component/compose/adder/: Cargo.toml
component/compose/cli/src/: main.rs
component/hello-world/src/: helloworld.rs  main.rs
docker/: Dockerfile  dockerize.sh
module/abi/: README.md
module/abi/cli/: Cargo.toml
module/abi/cli/src/: main.rs  utils.rs
module/abi/wasm/: Cargo.toml
module/abi/wasm/.cargo/: config.toml
module/abi/wasm/src/: lib.rs
module/custom-section/: Cargo.toml  README.md
module/custom-section/.cargo/: config.toml
module/custom-section/src/: lib.rs
module/quickstart/: README.md
module/quickstart/cli/: Cargo.toml
module/quickstart/cli/src/: main.rs
module/quickstart/wasm/: Cargo.toml
