[workspace]
members = [
  "module/quickstart/cli",
  "module/quickstart/wasm",
  "component/hello-world",
  "component/compose/adder",
  "component/compose/calculator",
  "component/compose/cli",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
wasmtime = "20.0.0"
wasmtime-wasi = "20.0.0"

[workspace.dependencies.async-std]
features = ["attributes"]
version = "1.12.0"

[workspace.dependencies.clap]
features = ["derive"]
version = "4.5.4"

[workspace.dependencies.wit-bindgen-rt]
features = ["bitflags"]
version = "0.24.0"

#[profile.release]
# 移除辅助调试的符号
#strip = true
# debuginfo 指示有选择的移除部分自定义小结的调试信息，例如 .debug_abbrev
#strip = "debuginfo"
