[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "docs:app"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"docs:calculator".path = "../calculator/wit"
"docs:adder".path = "../adder/wit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt.workspace = true
