[package]
name = "wit-record-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt.workspace = true

[lib]
name = "wit_record"
crate-type = ["cdylib"]

[package.metadata.component]
package = "helloworld:example"
