[package]
name = "hello-world-component-by-wit-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen.workspace = true

[lib]
name = "hello_world_by_wit_bindgen"
crate-type = ["cdylib"]

