[package]
name = "imports-cli"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "sammyne:imports-cli"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"sammyne:hello1".path = "../component1/wit"
"sammyne:hello2".path = "../component2/wit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt.workspace = true
