[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "docs:adder"

[package.metadata.component.dependencies]
